feat(admin): edit profiles and verify changes to account email
